--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -21345,12 +21345,15 @@ references:
   commentId: T:WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip
   fullName: WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip
   nameWithType: QuestDimensionalShip
-- uid: WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.#ctor(Rectangle,MacroTools.QuestSystem.QuestData,MacroTools.PreplacedUnitSystem)
-  name: QuestDimensionalShip(Rectangle, QuestData, PreplacedUnitSystem)
-  href: api-source/WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.html#WarcraftLegacies_Source_Quests_Draenei_QuestDimensionalShip__ctor_Rectangle_MacroTools_QuestSystem_QuestData_MacroTools_PreplacedUnitSystem_
-  commentId: M:WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.#ctor(Rectangle,MacroTools.QuestSystem.QuestData,MacroTools.PreplacedUnitSystem)
-  fullName: WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.QuestDimensionalShip(Rectangle, MacroTools.QuestSystem.QuestData, MacroTools.PreplacedUnitSystem)
-  nameWithType: QuestDimensionalShip.QuestDimensionalShip(Rectangle, QuestData, PreplacedUnitSystem)
+- uid: WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.#ctor(Rectangle,List{MacroTools.QuestSystem.QuestData})
+  name: QuestDimensionalShip(Rectangle, List<QuestData>)
+  href: api-source/WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.html#WarcraftLegacies_Source_Quests_Draenei_QuestDimensionalShip__ctor_Rectangle_List_MacroTools_QuestSystem_QuestData__
+  commentId: M:WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.#ctor(Rectangle,List{MacroTools.QuestSystem.QuestData})
+  name.vb: QuestDimensionalShip(Rectangle, List(Of QuestData))
+  fullName: WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.QuestDimensionalShip(Rectangle, List<MacroTools.QuestSystem.QuestData>)
+  fullName.vb: WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.QuestDimensionalShip(Rectangle, List(Of MacroTools.QuestSystem.QuestData))
+  nameWithType: QuestDimensionalShip.QuestDimensionalShip(Rectangle, List<QuestData>)
+  nameWithType.vb: QuestDimensionalShip.QuestDimensionalShip(Rectangle, List(Of QuestData))
 - uid: WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.#ctor*
   name: QuestDimensionalShip
   href: api-source/WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.html#WarcraftLegacies_Source_Quests_Draenei_QuestDimensionalShip__ctor_
@@ -21384,6 +21387,19 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.OnComplete
   nameWithType: QuestDimensionalShip.OnComplete
+- uid: WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.OnFail(MacroTools.FactionSystem.Faction)
+  name: OnFail(Faction)
+  href: api-source/WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.html#WarcraftLegacies_Source_Quests_Draenei_QuestDimensionalShip_OnFail_MacroTools_FactionSystem_Faction_
+  commentId: M:WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.OnFail(MacroTools.FactionSystem.Faction)
+  fullName: WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.OnFail(MacroTools.FactionSystem.Faction)
+  nameWithType: QuestDimensionalShip.OnFail(Faction)
+- uid: WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.OnFail*
+  name: OnFail
+  href: api-source/WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.html#WarcraftLegacies_Source_Quests_Draenei_QuestDimensionalShip_OnFail_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.OnFail
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.OnFail
+  nameWithType: QuestDimensionalShip.OnFail
 - uid: WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.RewardDescription
   name: RewardDescription
   href: api-source/WarcraftLegacies.Source.Quests.Draenei.QuestDimensionalShip.html#WarcraftLegacies_Source_Quests_Draenei_QuestDimensionalShip_RewardDescription
@@ -21526,6 +21542,64 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Quests.Draenei.QuestRepairExodarHull.RewardDescription
   nameWithType: QuestRepairExodarHull.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator
+  name: QuestRepairGenerator
+  href: api-source/WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.html
+  commentId: T:WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator
+  fullName: WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator
+  nameWithType: QuestRepairGenerator
+- uid: WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.#ctor
+  name: QuestRepairGenerator()
+  href: api-source/WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.html#WarcraftLegacies_Source_Quests_Draenei_QuestRepairGenerator__ctor
+  commentId: M:WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.#ctor
+  fullName: WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.QuestRepairGenerator()
+  nameWithType: QuestRepairGenerator.QuestRepairGenerator()
+- uid: WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.#ctor*
+  name: QuestRepairGenerator
+  href: api-source/WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.html#WarcraftLegacies_Source_Quests_Draenei_QuestRepairGenerator__ctor_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.#ctor
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.QuestRepairGenerator
+  nameWithType: QuestRepairGenerator.QuestRepairGenerator
+- uid: WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.CompletionPopup
+  name: CompletionPopup
+  href: api-source/WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.html#WarcraftLegacies_Source_Quests_Draenei_QuestRepairGenerator_CompletionPopup
+  commentId: P:WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.CompletionPopup
+  fullName: WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.CompletionPopup
+  nameWithType: QuestRepairGenerator.CompletionPopup
+- uid: WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.CompletionPopup*
+  name: CompletionPopup
+  href: api-source/WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.html#WarcraftLegacies_Source_Quests_Draenei_QuestRepairGenerator_CompletionPopup_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.CompletionPopup
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.CompletionPopup
+  nameWithType: QuestRepairGenerator.CompletionPopup
+- uid: WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.OnComplete(MacroTools.FactionSystem.Faction)
+  name: OnComplete(Faction)
+  href: api-source/WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.html#WarcraftLegacies_Source_Quests_Draenei_QuestRepairGenerator_OnComplete_MacroTools_FactionSystem_Faction_
+  commentId: M:WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.OnComplete(MacroTools.FactionSystem.Faction)
+  fullName: WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.OnComplete(MacroTools.FactionSystem.Faction)
+  nameWithType: QuestRepairGenerator.OnComplete(Faction)
+- uid: WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.OnComplete*
+  name: OnComplete
+  href: api-source/WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.html#WarcraftLegacies_Source_Quests_Draenei_QuestRepairGenerator_OnComplete_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.OnComplete
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.OnComplete
+  nameWithType: QuestRepairGenerator.OnComplete
+- uid: WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.RewardDescription
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.html#WarcraftLegacies_Source_Quests_Draenei_QuestRepairGenerator_RewardDescription
+  commentId: P:WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.RewardDescription
+  fullName: WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.RewardDescription
+  nameWithType: QuestRepairGenerator.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.RewardDescription*
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.html#WarcraftLegacies_Source_Quests_Draenei_QuestRepairGenerator_RewardDescription_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.RewardDescription
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Draenei.QuestRepairGenerator.RewardDescription
+  nameWithType: QuestRepairGenerator.RewardDescription
 - uid: WarcraftLegacies.Source.Quests.Draenei.QuestShipArgus
   name: QuestShipArgus
   href: api-source/WarcraftLegacies.Source.Quests.Draenei.QuestShipArgus.html
@@ -32677,6 +32751,19 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Setup.Legends.LegendDraenei.LegendExodar
   nameWithType: LegendDraenei.LegendExodar
+- uid: WarcraftLegacies.Source.Setup.Legends.LegendDraenei.LegendExodarGenerator
+  name: LegendExodarGenerator
+  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendDraenei.html#WarcraftLegacies_Source_Setup_Legends_LegendDraenei_LegendExodarGenerator
+  commentId: P:WarcraftLegacies.Source.Setup.Legends.LegendDraenei.LegendExodarGenerator
+  fullName: WarcraftLegacies.Source.Setup.Legends.LegendDraenei.LegendExodarGenerator
+  nameWithType: LegendDraenei.LegendExodarGenerator
+- uid: WarcraftLegacies.Source.Setup.Legends.LegendDraenei.LegendExodarGenerator*
+  name: LegendExodarGenerator
+  href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendDraenei.html#WarcraftLegacies_Source_Setup_Legends_LegendDraenei_LegendExodarGenerator_
+  commentId: Overload:WarcraftLegacies.Source.Setup.Legends.LegendDraenei.LegendExodarGenerator
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Setup.Legends.LegendDraenei.LegendExodarGenerator
+  nameWithType: LegendDraenei.LegendExodarGenerator
 - uid: WarcraftLegacies.Source.Setup.Legends.LegendDraenei.LegendMaraad
   name: LegendMaraad
   href: api-source/WarcraftLegacies.Source.Setup.Legends.LegendDraenei.html#WarcraftLegacies_Source_Setup_Legends_LegendDraenei_LegendMaraad
